language/move-compiler/tests/move_check/expansion/duplicate_module_after_mapping.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/duplicate_module_after_mapping.move:5:11
  │
4 │ module A::M {}
  │           - Module previously defined here as 'A::M', with 'A' = 0x42
5 │ module B::M {}
  │           ^ Duplicate definition of 'B::M', with 'B' = 0x42

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/duplicate_module_after_mapping.move:9:11
  │
8 │ module 0x1::M {}
  │             - Module previously defined here as '0x1::M'
9 │ module M::M {}
  │           ^ Duplicate definition of 'M::M', with 'M' = 0x1

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/duplicate_module_after_mapping.move:13:14
   │
12 │ module K::M {}
   │           - Module previously defined here as 'K::M', with 'K' = 0x19
13 │ module 0x19::M {}
   │              ^ Duplicate definition of '0x19::M'

